feat: add more fields to public keys
